# catchasemouse

./: README.md
CatGame/: CatGame.desktop  pyproject.toml  run-catgame-gui.sh  run-catgame.sh
CatGame/scripts/: validate_apps_link.sh  validate_pygame_gui.py
CatGame/specs/001-cat-chase-mouse/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
CatGame/specs/001-cat-chase-mouse/checklists/: requirements.md
CatGame/specs/001-cat-chase-mouse/contracts/: cli.md  game-api.md
CatGame/src/catgame/: __init__.py  leaderboard.py
CatGame/src/catgame/cli/: __init__.py  __main__.py  commands.py  curses_ui.py  render.py
CatGame/src/catgame/game/: __init__.py  moves.py  turn.py
CatGame/src/catgame/gui/: __init__.py  pygame_ui.py
CatGame/src/catgame/models/: __init__.py  cat.py  game_state.py  grid.py  mouse.py  position.py
CatGame/src/catgame/mouse_ai/: __init__.py  ai.py
CatGame/src/catgame/placement/: __init__.py  placement.py
CatGame/tests/: __init__.py
CatGame/tests/contract/: test_cli_display.py  test_cli_moves.py  test_cli_win.py  test_game_api.py
CatGame/tests/integration/: test_obstacles.py  test_turn_flow.py
CatGame/tests/unit/: test_game_turn.py
