[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "catgame"
version = "0.1.0"
description = "2D cat chase mouse game on a 25x25 grid"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
gui = ["pygame>=2.5"]
dev = [
    "pytest>=7",
    "ruff>=0.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
